# Wii

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cpu/: starlet.cpp  starlet.h
src/crypto/: aes.cpp  aes.h  aes_lib.cpp  sha1.cpp  sha1.h
src/memory/: bus.cpp  bus.h  nand.cpp  nand.h  otp.cpp  otp.h
util/: main  main.cr  utils.cr
